--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "nodemon": "^3.0.1",
+    "prettier": "^3.7.4",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.5.0"
